fixing the docker file and adding strong ui and other backend issue solved
